fix issue of overflow in mobile device

--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ body {
 .show-result-box h1 {
   font-size: 3rem;
   font-weight: 700;
+  color: var(--Lime);
 }
 .show-result-box hr {
   margin-top: 20px;
@@ -399,21 +400,21 @@ body {
 @media only screen and (max-width: 768px) {
   .calculator-container {
     width: 100%;
-    height: 100%;
     padding: 20px;
+    height: 75%;
   }
   .mortage-calculator-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
   .heading {
     display: flex;
     flex-direction: column;
     align-items: self-start;
-    /* justify-content: space-between;
-    align-items: center; */
   }
   .heading button {
     margin-top: 15px;
@@ -440,22 +441,34 @@ body {
   }
   .result-container-wrapper {
     width: 100%;
+    height:70%;
     border-radius: 0px;
     background-color: var(--Slate900);
   }
-  .result-container-wrapper main {
+  .calculater-image-container {
     width: 80%;
     padding: 30px 0;
     margin: 0 auto;
   }
-  .result-container-wrapper main img {
+  .calculater-image-container img {
     width: 50%;
     height: 50%;
   }
-  .result-container-wrapper main p {
+  .calculater-image-container p {
     font-size: 1.5rem;
     letter-spacing: 1px;
     word-spacing: 4px;
     text-align: center;
   }
+  .show-result-box{
+    margin: 20px 0;
+    padding-bottom: 20px;
+  }
+  .result-container{
+    padding-left: 30px;
+  }
+  .result-container p {
+    margin-top: 10px;
+  }
+ 
 }
